--- a/TransSite/templates/TransSite/base.html
+++ b/TransSite/templates/TransSite/base.html
@@ -10,7 +10,9 @@
     </head>
     <body>
         <div class="page-header">
+            <h1><a href="{% url 'about' %}" class="top-menu">Пра нас</a></h1>
             <h1><a href="/" >IT.Слоу́нік</a></h1>
+
         </div>
         <div class="content container">
             <div class="row">
